# RobotArrayVisualization

./: .clang-format  .gitignore  README.md
.github/workflows/: ci.yaml
dockerfiles/: Dockerfile  Dockerfile.windows  README.md  docker-compose.windows.yml  docker-compose.yml
dockerfiles/install/: i_dep.sh
robot_array_msgs/: CMakeLists.txt  README.md  package.xml
robot_array_msgs/msg/: RobotDescription.msg  RobotDescriptionArray.msg  RobotState.msg  RobotState.msg~  RobotStateArray.msg~  SingleRobotStateArray.msg
robot_array_rviz_plugins/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
robot_array_rviz_plugins/src/: CMakeLists.txt  ColorPropertySet.cpp  ColorPropertySet.h  MultiRobotStateArrayDisplay.cpp  MultiRobotStateArrayDisplay.h  RbdLinkUpdater.h  RobotStateArrayVisual.cpp  RobotStateArrayVisual.h  SingleRobotStateArrayDisplay.cpp  SingleRobotStateArrayDisplay.h  SingleRobotStateArrayVisual.cpp  SingleRobotStateArrayVisual.h
robot_array_rviz_plugins/tests/: CMakeLists.txt
robot_array_rviz_plugins/tests/launch/: fr3_description.launch.py  ur_description.launch.py
robot_array_rviz_plugins/tests/rviz/: TestMultiRobotStateArrayDisplay.rviz  TestMultiRobotStateArrayDisplayWithFile.rviz  TestSingleRobotStateArrayDisplay.rviz  TestSingleRobotStateArrayDisplayWithFile.rviz
robot_array_rviz_plugins/tests/scripts/: testMultiRobotStateArrayClient.py  testMultiRobotStateArrayClientWithFile.py  testRobotDescriptionMap.py  testSingleRobotStateArrayClient.py  testSingleRobotStateArrayClientWithFile.py
robot_array_rviz_plugins/tests/test/: TestMultiRobotStateArrayDisplay.test  TestSingleRobotStateArrayDisplay.test
robot_array_rviz_plugins/tests/urdf/: .gitignore  README.md  create_urdf.py  fr3+ur5e.message  fr3.urdf  ur5e.urdf
