<package format="2">
  <name>robot_array_msgs</name>
  <version>0.1.0</version>
  <description>
    ROS messages for visualization of robot arrays
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/robot_array_msgs</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <doc_depend>doxygen</doc_depend>
</package>
