<package format="2">
  <name>robot_array_rviz_plugins</name>
  <version>0.1.0</version>
  <description>
    Rviz plugins for visualization of robot arrays
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/robot_array_rviz_plugins</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>class_loader</depend>
  <depend version_gte="1.11.2">pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>robot_array_msgs</depend>
  <depend>rviz2</depend>
  <depend>eigen</depend>
  <depend>qtbase5-dev</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>xacro</depend>

  <test_depend>ros_testing</test_depend>
  <test_depend>franka_description</test_depend>
  <test_depend>ur_description</test_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>